# pkg/handlers/response.go
@@ -5,6 +5,10 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
+type responseId struct {
+	Id int `json:"id"`
+}
+
 type errorMsg struct {
 	Message string `json:"message"`
 }
